--- a/css/app.css
+++ b/css/app.css
@@ -3043,8 +3043,17 @@ ul li.slideUnder a {
     width: 100%;
   }
 
+  #news-events #article2 div:nth-child(3) div:nth-child(3) div{
+    text-align: center;
+    margin-top: 8%
+  }
+
   div.moreann, a.viewcalendar{
     font-size: 1.1em;
+  }
+
+  div.moreann{
+    margin: 8% auto 0;
   }
 
   .readmore a{
@@ -3325,13 +3334,17 @@ ul li.slideUnder a {
     width: 100%;
   }
 
+  #news-events #article2 div:nth-child(3) div:nth-child(3) div{
+    text-align: center;
+    margin-top: 8%
+  }
+
   div.moreann, a.viewcalendar{
     font-size: 1.3em;
   }
 
   div.moreann{
-    margin: 5% 0 0 2%;
-    text-align: left;
+    margin: 8% auto 0;
   }
 
   .readmore a{
@@ -3592,13 +3605,17 @@ ul li.slideUnder a {
     width: 100%;
   }
 
+  #news-events #article2 div:nth-child(3) div:nth-child(3) div{
+    text-align: center;
+    margin-top: 8%
+  }
+
   div.moreann, a.viewcalendar{
     font-size: 1.3em;
   }
 
   div.moreann{
-    margin: 5% 0 0 2%;
-    text-align: left;
+    margin: 8% auto 0;
   }
 
   .readmore a{
@@ -3886,13 +3903,17 @@ ul li.slideUnder a {
     width: 100%;
   }
 
+  #news-events #article2 div:nth-child(3) div:nth-child(3) div{
+    text-align: center;
+    margin-top: 8%
+  }
+
   div.moreann, a.viewcalendar{
     font-size: 1.3em;
   }
 
   div.moreann{
-    margin: 5% 0 0 2%;
-    text-align: left;
+    margin: 8% auto 0;
   }
 
   .readmore a{
@@ -4163,13 +4184,17 @@ ul li.slideUnder a {
     width: 100%;
   }
 
+  #news-events #article2 div:nth-child(3) div:nth-child(3) div{
+    text-align: center;
+    margin-top: 8%
+  }
+
   div.moreann, a.viewcalendar{
     font-size: 1.3em;
   }
 
   div.moreann{
-    margin: 5% 0 0 2%;
-    text-align: left;
+    margin: 8% auto 0;
   }
 
   .readmore a{
@@ -4460,13 +4485,17 @@ ul li.slideUnder a {
     width: 100%;
   }
 
+  #news-events #article2 div:nth-child(3) div:nth-child(3) div{
+    text-align: center;
+    margin-top: 8%
+  }
+
   div.moreann, a.viewcalendar{
     font-size: 1.3em;
   }
 
   div.moreann{
-    margin: 5% 0 0 2%;
-    text-align: left;
+    margin: 8% auto 0;
   }
 
   .readmore a{
@@ -4763,13 +4792,17 @@ ul li.slideUnder a {
     width: 100%;
   }
 
+  #news-events #article2 div:nth-child(3) div:nth-child(3) div{
+    text-align: center;
+    margin-top: 8%
+  }
+
   div.moreann, a.viewcalendar{
     font-size: 1.3em;
   }
 
   div.moreann{
-    margin: 5% 0 0 2%;
-    text-align: left;
+    margin: 8% auto 0;
   }
 
   .readmore a{
@@ -5074,13 +5107,17 @@ ul li.slideUnder a {
     width: 100%;
   }
 
+  #news-events #article2 div:nth-child(3) div:nth-child(3) div{
+    text-align: center;
+    margin-top: 8%
+  }
+
   div.moreann, a.viewcalendar{
     font-size: 1.3em;
   }
 
   div.moreann{
-    margin: 5% 0 0 2%;
-    text-align: left;
+    margin: 8% auto 0;
   }
 
   .readmore a{
@@ -5386,13 +5423,17 @@ ul li.slideUnder a {
     width: 100%;
   }
 
+  #news-events #article2 div:nth-child(3) div:nth-child(3) div{
+    text-align: center;
+    margin-top: 8%
+  }
+
   div.moreann, a.viewcalendar{
     font-size: 1.3em;
   }
 
   div.moreann{
-    margin: 5% 0 0 2%;
-    text-align: left;
+    margin: 8% auto 0;
   }
 
   .readmore a{
@@ -5700,13 +5741,23 @@ ul li.slideUnder a {
     width: 100%;
   }
 
+  #news-events #article2 div:nth-child(3) div:nth-child(3) div{
+    text-align: center;
+    margin-top: 8%
+  }
+
   div.moreann, a.viewcalendar{
     font-size: 1.3em;
   }
 
   div.moreann{
-    margin: 5% 0 0 2%;
-    text-align: left;
+    display: block;
+    margin: 8% auto 0;
+    text-align: center;
+  }
+
+  #moreannMobile{
+    display: none;
   }
 
   .readmore a{
@@ -5818,12 +5869,17 @@ ul li.slideUnder a {
 @media only screen and (min-width: 320px) and (max-width: 641px) {
   #moreannMobile{
     display: block;
-    margin: 5% auto 0;
+    margin: 8% auto 0;
     text-align: center;
   }
 
   div.moreann{
     display: none;
+  }
+
+  #news-events #article2 div:nth-child(3) div:nth-child(3) div{
+    text-align: center;
+    margin-top: 8%
   }
 }
 
