--- a/css/app.css
+++ b/css/app.css
@@ -5867,6 +5867,12 @@ ul li.slideUnder a {
 
 
 @media only screen and (min-width: 320px) and (max-width: 641px) {
+  .top-bar-section{
+    -webkit-box-shadow: 0 15px 19px 2px rgba(0, 0, 0, 0.7);
+    -moz-box-shadow: 0 15px 19px 2px rgba(0, 0, 0, 0.7);
+    box-shadow: 0 5px 7px 2px rgba(0, 0, 0, 0.3);
+  }
+
   #moreannMobile{
     display: block;
     margin: 8% auto 0;
